# homebase

./: README.md  docker-compose.yaml
userservice/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  sample-api-requests.http
userservice/src/: app.js  config.js  errors.js
userservice/src/api/: user-api.js
userservice/src/models/: User.js  db.js  index.js
userservice/src/services/user-service/: index.js
userservice/src/services/validation-service/: user-validation.js
userservice/src/services/validation-service/mixins/: index.js
userservice/tests/e2e/: user.test.js  utils.js
userservice/tests/e2e/fixtures/: user-fixture.js
webapp/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
webapp/product/: apps.py  models.py
webapp/product/migrations/: 0001_initial.py
webapp/user/: apps.py  auth_backend.py  models.py  userservice_proxy.py
webapp/user/management/commands/: wait_for_db.py
webapp/user/migrations/: 0001_initial.py  0002_user_permission_ids.py
webapp/user/tests/: test_userservice_proxy.py
webapp/webapp/: settings.py
